--- a/WWT_Testing/test-output/index.html
+++ b/WWT_Testing/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\amuppidi\AppData\Local\Temp\testng-eclipse--2120400384\testng-customsuite.xml</span>
+                    <span>C:\Users\amuppidi\AppData\Local\Temp\testng-eclipse--1146395936\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -127,19 +127,15 @@
                   <a name="compareReports">
                   </a> <!-- compareReports -->
                   <span class="method-name">compareReports</span>
-                  <div class="stack-trace">java.lang.NullPointerException
-	at dataLoad.FileData.getValues(FileData.java:40)
-	at com.wwt.main.snobird.pageObjects.BiResourcesTab.load(BiResourcesTab.java:39)
-	at com.wwt.main.snobird.pageObjects.BiResourcesTab.&lt;init&gt;(BiResourcesTab.java:27)
-	at com.wwt.test.snowbird.reportTestcases.CompareOldandNewReports.compareReports(CompareOldandNewReports.java:31)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
-	at java.lang.reflect.Method.invoke(Unknown Source)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:84)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:714)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:901)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1231)
+                  <div class="stack-trace">org.testng.TestNGException: 
+Method compareReports requires 4 parameters but 0 were supplied in the @Test annotation.
+	at org.testng.internal.Parameters.checkParameterTypes(Parameters.java:198)
+	at org.testng.internal.Parameters.createParameters(Parameters.java:134)
+	at org.testng.internal.Parameters.createParameters(Parameters.java:373)
+	at org.testng.internal.Parameters.handleParameters(Parameters.java:450)
+	at org.testng.internal.Invoker.handleParameters(Invoker.java:1383)
+	at org.testng.internal.Invoker.createParameters(Invoker.java:1075)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1180)
 	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)
 	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)
 	at org.testng.TestRunner.privateRun(TestRunner.java:767)
@@ -165,7 +161,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\amuppidi\AppData\Local\Temp\testng-eclipse--2120400384\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\amuppidi\AppData\Local\Temp\testng-eclipse--1146395936\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -218,12 +214,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'compareReports')
 data.setCell(0, 2, 'com.wwt.test.snowbird.reportTestcases.CompareOldandNewReports')
-data.setCell(0, 3, 8444);
+data.setCell(0, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 0 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -254,15 +250,9 @@ return data;
                 <span class="method-name">beforeTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">compareReports</span>
-                <span class="method-start">16530 ms</span>
-              </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">24982 ms</span>
+                <span class="method-start">12527 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
